--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
 
 /* Top header */
 
@@ -10,7 +12,6 @@
     color: #e5e7eb;
     font-size: 18px;
     justify-content: space-between;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 .logo {
@@ -61,7 +62,7 @@
     max-height: 300px;
     margin-left: 30px;
     border-radius: 10%;
-    border: #E5E7EB solid 3px;
+    border: #E5E7EB outset 5px;
 }
 
 .donate button {
@@ -166,7 +167,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    
+    border: #1f2937 3px double;
     flex: 1;
 }
 
@@ -198,7 +199,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: orange dotted 3px;
     flex: 1;
     padding: 40px;
 }
@@ -253,32 +253,13 @@
     border: 2px solid white;
 }
 
+/* Footer */
 
-
-
-/*
-.button-card-container > * {
+.footer-container {
+    padding: 20px;
     display: flex;
     justify-content: center;
-    border-radius: 15px;
-    width: 60%;
-    margin: 40px;
-    background-color: #3882f6;
-}
-
-.call-action-container {
-    
-    display: flex;
-    justify-content: center;
-    padding: 40px;
-    width: 40%;
-}
-
-.help button {
-    background-color: #3882f6;
-    border-radius: 10%;
+    align-items: center;
+    background-color: #1f2937;
     color: #E5E7EB;
-    font-weight: 800;
-    padding: 5px 20px;
-    border: #E5E7EB solid 2px;
 }
