--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
 
 .donate button {
     background-color: #3882f6;
-    border-radius: 10%;
+    border-radius: 0.5rem;
     color: #E5E7EB;
     font-weight: 800;
     padding: 5px 20px;
@@ -243,7 +243,7 @@ body {
 
 .help button {
     background-color: #3882f6;
-    border-radius: 10%;
+    border-radius: 0.5rem;
     color: #E5E7EB;
     font-weight: 800;
     padding: 5px 40px;
@@ -263,3 +263,6 @@ body {
     background-color: #1f2937;
     color: #E5E7EB;
 }
+
+/* playing around */
+
